syntax = "proto3";

import "Protos/base.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.ImpedimentoProto";

package impedimento;

service ImpedimentoProto {

	rpc Incluir (ImpedimentoModel) returns (ImpedimentoModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (ImpedimentoModel);
	rpc Alterar (ImpedimentoModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
}

message ImpedimentoModel {

	string Id = 1;
	string Nome = 2;
	string DataInclusao = 3;
}

message ListarReply {

    repeated ImpedimentoModel Lista = 1;
}